--- a/css/general.css
+++ b/css/general.css
@@ -1,19 +1,36 @@
 .button {
-	background-color: rgba(11, 35, 73, 0.8);
+	background-color: rgba(13, 97, 188, 0.8);
     color: #fff;
     font-size: 20px;
     padding: 15px 30px;
     border: 2px solid #fff;
     text-transform: uppercase;
     text-align: center;
+    box-sizing: border-box;
 }
 .button:hover {
-	background-color: rgba(11, 35, 73, 1);
+	background-color: rgba(13, 97, 188, 1);
 	transition: 0.4s;
 }
 h3 {
 	font-size: 2em;
 	font-weight: 600;
 	padding: 20px 0;
-	text-align: left;
+}
+h2 {
+	font-size: 1.2em;
+	font-weight: 550;
+	margin: 10px; 
+}
+p {
+	line-height: 1.7em;
+}
+main {
+	text-align: center;
+}
+section {
+	padding: 0 3%;
+}
+.even {
+	background-color: #DFE0EB;
 }
