--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@ body {
 	font-size: 16px;
 }
 header {
-	height: 100vh;
 	position: relative;
 	background-color: #fff;
+	z-index: 2;
 }
 .header-nav {
 	height: 60px;
@@ -86,11 +86,19 @@ header {
 
 
 #slider {
-	background-image: url('/img/mountains-1645078_1920.jpg');
 	background-repeat: no-repeat;
 	position: relative;
-	height: 100%;
+	height: 100vh;
+}
+#slider img {
+	position: absolute;
+	padding: 0;
+	margin: 0;
+	display: block;
+	height: 100vh;
+	min-width: 100%;
 	
+	transition: opacity 1s;
 }
 #slider p {
     margin: 0;
@@ -102,10 +110,11 @@ header {
     color: #fff;
     font-size: 3em;
     font-weight: bold;
+    z-index: 2;
 }
 #slider .button{
 	position: absolute;
-	z-index: 1;
+	z-index: 2;
 	top: 70%;
     left: 50%;
     margin-right: -50%;
@@ -232,7 +241,7 @@ aside input {
 	width: 100%;
 }
 .booking {
-	background-image: url('/img/rough-horn-2146181_1920.jpg');
+	background-image: url('../img/rough-horn-2146181_1920.jpg');
 	background-position: center;
 	background-blend-mode: multiply;
 }
@@ -261,4 +270,37 @@ aside input {
 } 
 .contacts iframe {
 	width: 50%;
+}
+footer {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 20px 40px;
+}
+footer form {
+	width: 50%;
+}
+footer input {
+	border: 2px solid #DFE0EB;
+	margin: 10px; 
+	width: 60%;
+}
+footer .form-btn {
+	margin: 10px;
+	font-size: 0.8em;
+	padding: 5px;
+	width: 20%;
+	min-width: 80px;
+	height: 30px;
+	outline: none;
+}
+.footer {
+	font-size: 1.2em;
+	width: 50%;
+	display: flex;
+	align-items: flex-end;
+	justify-content: flex-end;
+}
+.footer .site-name {
+	font-size: 1.5em;
 }
