--- a/css/general.css
+++ b/css/general.css
@@ -65,3 +65,13 @@ input:focus {
 a {
 	color: #0B2349;
 }
+aside {
+	width: 25%;
+	background-color: #DFE0EB;
+	text-align: center;
+	padding: 30px 20px;
+}
+aside input {
+	padding: 5px;
+	margin: 10px 20px 20px 10px; 
+}
