--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ header {
 	position: absolute;
 	z-index: 1;
 	width: 94%;
+	border-bottom: 1px solid #8AA9D6;
 }
 .header-nav a:visited {
   color: #0B2349;
@@ -275,6 +276,7 @@ footer {
 	align-items: center;
 	justify-content: space-between;
 	padding: 20px 40px;
+	border-top: 1px solid #8AA9D6;
 }
 footer form {
 	width: 50%;
@@ -302,4 +304,22 @@ footer .form-btn {
 }
 .footer .site-name {
 	font-size: 1.5em;
+}
+.main {
+	display: flex;
+	margin-top: 85px;
+}
+.main section {
+	padding: 8%;
+	width: 75%;
+	text-align: justify;
+}
+.activities-page-item {
+	width: 75%;
+	margin-bottom: 60px;
+	position: relative;
+}
+.activities-page-item .button {
+	position: relative;
+	top: 30px;
 }
