--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ aside input {
 	position: relative;
 	top: 85px;
 	box-sizing: border-box;
-	height: 100%;
+	min-height: 100vh;
 	margin-bottom: 115px;
 }
 .gallery {
@@ -302,15 +302,30 @@ aside input {
 	flex-wrap: wrap;
 	justify-content: center;
 }
-.gallery img {
+.gallery-img {
 	max-width: 300px;
 	height: 300px;
 	object-fit: cover;
 	margin: 20px;
 	overflow: hidden;
 }
-.gallery img:hover {
-	transform: scale(1.2);
-	box-shadow: 0 0 20px #8AA9D6;
+.gallery-img img {
+	min-width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+.gallery-img img:hover {
+	transform: scale(1.1);
 	transition: 0.5s;
+}
+.gallery-img:hover {
+	box-shadow: 0 0 30px #4E5082;
+	transition: 0.5s;
+}
+#previous, #current-number, #next {
+	border: 1px solid #8AA9D6;
+	margin: 10px;
+	color: #4E5082;
+	padding: 5px 10px;
+	cursor: pointer;
 }
