--- a/css/style.css
+++ b/css/style.css
@@ -366,7 +366,7 @@ aside input {
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
-	background-color: rgba(78, 80, 130, 0.3)
+	background-color: rgba(78, 80, 130, 0.3);
 }
 .book h2 {
 	font-size: 2em;
@@ -415,4 +415,45 @@ aside input {
 }
 #sort-filter input {
 	width: 50px;
+}
+#available-rooms-container {
+	position: absolute;
+	z-index: 4;
+	width: 90%;
+	right: 5%;
+	top: 65px;
+	background-color: #fff;
+	box-sizing: border-box;
+	border: 4px solid rgb(78, 80, 130);
+	border-radius: 15px;
+	box-shadow: 0 0 200px rgb(78, 80, 130);
+	padding: 30px;
+}
+#available-rooms-container button {
+	position: absolute;
+	top: -10px;
+	right: -10px;
+	width: 35px;
+	height: 35px;
+	border-radius: 50%;
+	background-color: #fff;
+	box-sizing: border-box;
+	border: 2px solid red;
+	color: red;
+
+}
+#available-rooms-container table {
+	width: 100%;
+	text-align: justify;
+}
+#available-rooms-container table tr {
+	padding-top: 10px;
+}
+.bookingTable {
+	padding-left: 20px;
+	width: 45%;
+	text-align: right;
+}
+.bookingTable .button {
+	margin-left: 13%;
 }
