--- a/css/style.css
+++ b/css/style.css
@@ -457,3 +457,16 @@ aside input {
 .bookingTable .button {
 	margin-left: 13%;
 }
+#free-rooms {
+	display: none;
+}
+.search-item {
+	margin: 15px;
+	padding: 15px 20px;
+	border-radius: 7px;
+	border: 1px solid rgb(223, 224, 235);
+	box-sizing: border-box;
+}
+.search-item:hover {
+	box-shadow: 0 0 10px rgb(223, 224, 235);
+}
