--- a/css/general.css
+++ b/css/general.css
@@ -22,7 +22,6 @@ h3 {
 }
 h2 {
 	font-size: 1.2em;
-	font-size: 1.4vw;
 	font-weight: 550;
 	margin: 10px; 
 }
@@ -78,6 +77,7 @@ aside form {
 	right: 4.5%;
 	text-align: center;
 	z-index: 3;
+	max-width: 15%;
 
 }
 aside input {
@@ -123,7 +123,7 @@ footer .form-btn {
 	min-height: 600px;
 }
 .main section {
-	padding: 8%;
+	padding: 100px 8%;
 	width: 75%;
 	text-align: justify;
 }
