--- a/css/general.css
+++ b/css/general.css
@@ -72,13 +72,7 @@ aside {
 	position: relative;
 }
 aside form {
-	position: fixed;
-	top: 130px;
-	right: 4.5%;
-	text-align: center;
-	z-index: 3;
-	max-width: 15%;
-
+	margin-top: 120px;
 }
 aside input {
 	padding: 5px;
