--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,7 @@ header {
 	max-width: 300px;
 	height: 300px;
 	object-fit: cover;
-	margin: 20px auto;
+	margin: 20px 5px;
 	overflow: hidden;
 }
 .gallery-img img {
