--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ header {
 	max-width: 300px;
 	height: 300px;
 	object-fit: cover;
-	margin: 20px 5px;
+	margin: 20px 10px;
 	overflow: hidden;
 }
 .gallery-img img {
@@ -653,6 +653,9 @@ ul.breadcrumb li a:hover {
 	}
 	.booking-form {
 		flex-direction: column;
+	}
+	.gallery-img {
+	margin: 15px auto;
 	}
 	.contacts {
 		flex-direction: column;
